--- a/thor-android/src/main/AndroidManifest.xml
+++ b/thor-android/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".fragment.AddShopActivity"/>
+        <activity android:name=".fragment.SignInActivity"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
